// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Entity VerifyIcon component tests should deactivate if wrong command level permissions are given 1`] = `
.c1 svg path {
  fill: #aaaaaa;
}

.c0 {
  height: 16px;
  width: 16px;
  line-height: 16px;
}

.c0 * {
  height: inherit;
  width: inherit;
}

<span
  class="c0 c1"
  title="Permission to verify Report Format denied"
>
  <svg>
    verify.svg
  </svg>
</span>
`;

exports[`Entity VerifyIcon component tests should deactivate if wrong resource level permissions are given 1`] = `
.c1 svg path {
  fill: #aaaaaa;
}

.c0 {
  height: 16px;
  width: 16px;
  line-height: 16px;
}

.c0 * {
  height: inherit;
  width: inherit;
}

<span
  class="c0 c1"
  title="Permission to verify Report Format denied"
>
  <svg>
    verify.svg
  </svg>
</span>
`;

exports[`Entity VerifyIcon component tests should render in active state with correct permissions 1`] = `
.c1 {
  cursor: pointer;
}

.c0 {
  height: 16px;
  width: 16px;
  line-height: 16px;
}

.c0 * {
  height: inherit;
  width: inherit;
}

@media print {
  .c1 {
    display: none;
  }
}

<span
  class="c0 c1"
  title="Verify Report Format"
>
  <svg>
    verify.svg
  </svg>
</span>
`;

exports[`Entity VerifyIcon component tests should render in active state with correct permissions and name given 1`] = `
.c1 {
  cursor: pointer;
}

.c0 {
  height: 16px;
  width: 16px;
  line-height: 16px;
}

.c0 * {
  height: inherit;
  width: inherit;
}

@media print {
  .c1 {
    display: none;
  }
}

<span
  class="c0 c1"
  title="Verify Report Format"
>
  <svg>
    verify.svg
  </svg>
</span>
`;
